--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,16 +1,19 @@
 {
   "name": "@simple-monorepo/server",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "./dist/index.js",
   "license": "MIT",
   "dependencies": {
     "express": "^4.17.1"
   },
   "devDependencies": {
+    "@types/express": "^4.17.8",
+    "nodemon": "^2.0.4",
     "typescript": "^4.0.3"
   },
   "scripts": {
     "build": "tsc -p tsconfig.json",
-    "watch": "tsc -p tsconfig.json -w"
+    "watch": "tsc -p tsconfig.json -w",
+    "restarter": "nodemon ."
   }
 }
