--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -14,6 +14,7 @@
   "scripts": {
     "build": "tsc -p tsconfig.json",
     "watch": "tsc -p tsconfig.json -w",
-    "restarter": "nodemon ."
+    "restarter": "nodemon .",
+    "postinstall": "yarn build"
   }
 }
