--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -9,7 +9,6 @@
   },
   "scripts": {
     "build": "tsc -p tsconfig.json",
-    "watch": "tsc -p tsconfig.json -w",
-    "postinstall": "yarn build"
+    "watch": "tsc -p tsconfig.json -w"
   }
 }
