--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -14,7 +14,6 @@
   "scripts": {
     "build": "tsc -p tsconfig.json",
     "watch": "tsc -p tsconfig.json -w",
-    "restarter": "nodemon .",
-    "postinstall": "yarn build"
+    "restarter": "nodemon ."
   }
 }
